# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 1999-2004 Gentoo Foundation; Distributed under the GPL v2
# $Id$

  MAJOR CHANGES in 2.0.51:
    1. /var/cache/edb/virtuals is no longer used at all. It's calculated now.
    2. /var/cache/edb/world is now /var/lib/portage/world.
    3. /etc/portage/profile/virtuals is _USER_ configs only.

  10 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py,
  pym/portage_versions.py: Moved catsplit into versions and updated
  references to it.  Likely just broke a few external tools (assuming
  they were coded correctly and weren't abusing string.split("/")).

  10 Nov 2004; Brian Harring <ferringb@gentoo.org> 
  bin/ebuild-default-functions.sh, bin/affect-fakeroot-perms.sh:
  Closing out bug where suid/sgid is wiped by chowning,
  noticed a similar issue in affect-fakeroot-perms. (#56129)

  10 Nov 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh:
  Dropping all support for reloading env attributes from a .51 dump.
  It wasn't implemented correctly, and it's not worth the duct tape
  and questionable code to try and half-ass support it.

  10 Nov 2004; Brian Harring <ferringb@gentoo.org> bin/etc-update:
  Fixed etc-update so it actually runs; long story short, the portageq
  calls for getting CONFIG_PROTECT(|_MASK) were wrong.

  10 Nov 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild.sh:
  Added kludge to filtering for env reloading to match the export kludge
  added to 2.0.51.  This code must stay in as long as .51 env's 
  *potentially* exist on a users system.

  10 Nov 2004; Brian Harring <ferringb@gentoo.org> bin/ebuild-daemon.sh:
  Made it much more noisy when a violation is hit.

  10 Nov 2004; Brian Harring <ferringb@gentoo.org> 
  bin/affect-fakeroot-perms.sh:  rewrote this script so that it's less 
  likely to piss off fakeroot by spawning multiple instances of a client.

  10 Nov 2004; Marius Mauch <genone@gentoo.org> +pym/portage_versions.py,