@@ -7,6 +7,18 @@
     2. /var/cache/edb/world is now /var/lib/portage/world.
     3. /etc/portage/profile/virtuals is _USER_ configs only.
 
+  10 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/portage_locks.py:
+  Reversion of lock choice strategy to what I stuck in originally, and 
+  removal of the 3s sleep in hardlink.  The 3s is obviously bad, the 
+  reason for reverting to trying flock then lockf then hardlink is simple-
+  hardlink is slow, and requires creation of extra files on disk.  It
+  also won't behave with fd's passed in (which should be used often, 
+  rather then this 'lets create a file every 0.0001s' strategy.  This makes 
+  a huge difference in runtime in certain cases.  Case that exposed this- 
+  9m relying on lockf -> hardlink reduced to 1.5m for flock -> lockf -> 
+  hardlink.  The difference?  lockf didn't work on that fs, so it was using
+  hardlink.  Leave it in, it's faster, it's redundant, and it works.
+
   10 Nov 2004; Brian Harring <ferringb@gentoo.org> pym/portage.py,
   pym/portage_versions.py: Moved catsplit into versions and updated
   references to it.  Likely just broke a few external tools (assuming
